--- a/literature.bib
+++ b/literature.bib
@@ -1,6 +1,6 @@
 @article{aiken-note-taking,
   author={Edwin G. Aiken and Gary S. Thomas and William A. Shennum},
-  title={Memory for a lecture: Effects of notes, lecture rate, and informational density},
+  title={Memory for a Lecture: Effects of Notes, Lecture Rate, and Informational Density},
   journal={Journal of Educational Psychology},
   volume={67},
   number={3},
@@ -22,16 +22,16 @@
 }
 
 @article{aveling-checklists,
-  author = {Emma-Louise Aveling and Peter McCulloch and Mary Dixon-Woods},
-  title = {A qualitative study comparing experiences of the surgical safety checklist in hospitals in high-income and low-income countries},
-  journal = {BMJ Open},
-  volume = {3},
-  number = {8},
-  year = {2013},
-  doi = {10.1136/bmjopen-2013-003039},
-  publisher = {British Medical Journal Publishing Group},
-  issn = {2044-6055},
-  URL = {http://bmjopen.bmj.com/content/3/8/e003039},
+  author={Emma-Louise Aveling and Peter McCulloch and Mary Dixon-Woods},
+  title={A Qualitative Study Comparing Experiences of the Surgical Safety Checklist in Hospitals in High-Income and Low-Income Countries},
+  journal={BMJ Open},
+  volume={3},
+  number={8},
+  year={2013},
+  doi={10.1136/bmjopen-2013-003039},
+  publisher={British Medical Journal Publishing Group},
+  issn={2044-6055},
+  URL={http://bmjopen.bmj.com/content/3/8/e003039},
   annotate={Reports on surgical checklist implementations and effects in the UK and Africa.}
 }
 
@@ -50,7 +50,7 @@
 
 @techreport{baume-outcomes,
   author={D. Baume},
-  title={Writing and using good learning outcomes},
+  title={Writing and Using Good Learning Outcomes},
   publisher={Leeds Metropolitan University Press},
   isbn={978-0-9560099-5-1},
   year={2009},
@@ -234,9 +234,21 @@
   annotate={Ten things many people believe that aren't true.}
 }
 
+@article{hannay-pairing,
+  author={Jo E. Hannay and Tore Dybå and Erik Arisholm and Dag I.K. Sjøberg},
+  title={The Effectiveness of Pair Programming: A Meta-Analysis},
+  journal={Information and Software Technology},
+  volume={51},
+  number={7},
+  year={2009},
+  doi={10.1016/j.infsof.2009.02.001},
+  url={http://www.sciencedirect.com/science/article/pii/S0950584909000123},
+  annotate={A summary of research on the effectiveness of pair programming.}
+}
+
 @article{henderson-facilitating,
   author={Charles Henderson and Andrea Beach and Noah Finkelstein},
-  title={Facilitating change in undergraduate STEM instructional practices: An analytic review of the literature},
+  title={Facilitating Change in Undergraduate STEM Instructional Practices: An Analytic Review of the Literature},
   journal={Journal of Research in Science Teaching},
   volume={48},
   number={8},
@@ -282,7 +294,7 @@
 
 @book{kernighan-ritchie-c,
   author={Brian W. Kernighan and Dennis M. Ritchie},
-  title={The  C Programming Language},
+  title={The C Programming Language},
   publisher={Prentice Hall Professional Technical Reference},
   year={1988},
   edition={2},
@@ -293,12 +305,11 @@
 
 @article{kirschner-minimal,
   author={Paul Kirschner and John Sweller and Richard Clark},
-  journal={Educational Psychologist},
-  number={2},
-  pages={75--86},
   title={Why Minimal Guidance During Instruction Does Not Work: An Analysis of the Failure of Constructivist, Discovery, Problem-Based, Experiential, and Inquiry-Based Teaching},
-  volume=41,
-  year=2006,
+  journal={Educational Psychologist},
+  volume={41},
+  number={2},
+  year={2006},
   annotate={Argues that inquiry-based learning is less effective for novices than guided instruction.}
 }
 
@@ -327,7 +338,7 @@
 
 @misc{lee-create-inclusive-community,
   author={Cynthia Lee},
-  title={What can I do today to create a more inclusive community in CS?},
+  title={What Can I Do Today to Create a More Inclusive Community in CS?},
   howpublished={https://docs.google.com/document/d/1hLivou9-_wmsZuzKI2pCGQu0KHVIgYfJSaYhvTgO0Wo/},
   year={2017},
   annotate={A practical checklist of things instructors can do to make their computing classes more inclusive.}
@@ -501,7 +512,7 @@
 
 @book{scott-state,
   title={Seeing Like a State: How Certain Schemes to Improve the Human Condition Have Failed},
-  author={Scott, J.C.},
+  author={J. C. Scott},
   publisher={Yale University Press},
   year={1999},
   isbn={978-0300128789},
