Removing more FIXMEs

--- a/literature.bib
+++ b/literature.bib
@@ -418,6 +418,18 @@
   annotate={Shows how research into how we absorb and process information can be applied to the design of instructional materials.}
 }
 
+@article{miller-predictions,
+  author={Kelly Miller and Nathaniel Lasry and Kelvin Chu and Eric Mazur},
+  title={Role of Physics Lecture Demonstrations in Conceptual Learning},
+  journal={Physical Review Physics Education Research},
+  volume={9},
+  issue={2},
+  year={2013},
+  doi={10.1103/PhysRevSTPER.9.020113},
+  annotate={Reports a detailed study of what students learn during demonstrations and why.}
+}
+
+
 @article{mueller-note-taking,
   author={Pam A. Mueller and Daniel M. Oppenheimer},
   title={The Pen Is Mightier Than the Keyboard},
