Better chapter headings

--- a/template.tex
+++ b/template.tex
@@ -7,6 +7,8 @@
 \setulmarginsandblock{1.00in}{1.00in}{*}
 \checkandfixthelayout
 
+\chapterstyle{southall}
+
 \setlist[enumerate]{leftmargin=2em}
 \setlist[itemize]{leftmargin=2em}
 
@@ -241,6 +243,7 @@ Copyright {\copyright} 2017
 
 \pagenumbering{roman}
 
+\addtocontents{toc}{\protect\thispagestyle{empty}}
 \tableofcontents
 
 \newpage
