--- a/template.tex
+++ b/template.tex
@@ -1,10 +1,12 @@
 \documentclass[10pt,statementpaper]{memoir}
 
+\setstocksize{9in}{6in}
+
 \usepackage{tgpagella}
 \usepackage{enumitem}
 
-\setlrmarginsandblock{0.75in}{0.75in}{*}
-\setulmarginsandblock{1.00in}{1.00in}{*}
+\setlrmarginsandblock{0.5in}{0.5in}{*}
+\setulmarginsandblock{0.6in}{0.6in}{*}
 \checkandfixthelayout
 
 \usepackage{etoolbox}
@@ -74,7 +76,7 @@
 
   {\Huge\itshape How to Teach Programming \\ (And Other Things)}\\[\baselineskip]
 
-  {\large\itshape what everyone in tech ought to know\\ about teaching and learning}\\[0.2\textheight]
+  {\large\itshape what everyone in tech ought to know\\ about creating and delivering high-quality learning}\\[0.2\textheight]
 
   {\large Edited by Greg Wilson}\par
 
@@ -84,7 +86,7 @@
 
   \vspace*{\baselineskip}
 
-  {\small
+  {\tiny
     Licensed under the Creative Commons - Attribution license (CC-BY-3.0).
     \\
     See \texttt{https://github.com/gvwilson/teaching} for the source.
