--- a/template.tex
+++ b/template.tex
@@ -76,7 +76,9 @@
 
   {\Huge\itshape How to Teach Programming \\ (And Other Things)}\\[\baselineskip]
 
-  {\large\itshape what everyone in tech ought to know\\ about creating and delivering high-quality learning}\\[0.2\textheight]
+  {\large\itshape
+    what everyone in tech ought to know\\ about teaching and learning
+  }\\[0.2\textheight]
 
   {\large Edited by Greg Wilson}\par
 
@@ -86,7 +88,7 @@
 
   \vspace*{\baselineskip}
 
-  {\tiny
+  {\small
     Licensed under the Creative Commons - Attribution license (CC-BY-3.0).
     \\
     See \texttt{https://github.com/gvwilson/teaching} for the source.
