Adding CITATION file

--- a/template.tex
+++ b/template.tex
@@ -94,7 +94,9 @@
     See \texttt{https://github.com/gvwilson/teaching} for the source.
   }
 
-  \vspace*{\baselineskip}
+  \vspace*{4\baselineskip}
+
+  \includegraphics{isbn-barcode.pdf}
 
 \endgroup}
 
