Adding link to online version to title page

--- a/template.tex
+++ b/template.tex
@@ -91,7 +91,8 @@
   {\small
     Licensed under the Creative Commons - Attribution license (CC-BY-3.0).
     \\
-    See \texttt{https://github.com/gvwilson/teaching} for the source.
+    See \texttt{https://github.com/gvwilson/teaching} for the source,\\
+    and \texttt{http://third-bit.com/teaching/} for the online version.
   }
 
   \vspace*{4\baselineskip}
